[package]
name = "aoc_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder="*"

[dev-dependencies]
cargo-criterion = "*"
criterion = "*"

[[bench]]
name = "aoc_2022"
harness = false

[profile.dev]
# Day 03 has "<< (c - 96)" which CAN shift 0 by a negative amount
overflow-checks = false #  Turn off the checks to avoid the error