[package]
name = "aoc_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
relative-path = "1.7.2"
pest = "2.5.1"
pest_derive = "2.5.1"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "aoc_2022"
harness = false

[profile.dev]
# Day 03 has "<< (c - 96)" which CAN shift 0 by a negative amount
overflow-checks = false #  Turn off the checks to avoid the error